# HAM

./: Error.md  blufi.7z
AS_HomeAutomation/: .cproject  .project  CMakeLists.txt  README.md  build_log.txt  sdkconfig
AS_HomeAutomation/blufi/: .cproject  sdkconfig
AS_HomeAutomation/components/cloud_client/: CMakeLists.txt  cloud_client.c  cloud_client.h
AS_HomeAutomation/components/common/: CMakeLists.txt  config_generated.c  device_registry.c  device_registry.h  driver_pool.c  driver_pool.h  feature_flags.c  feature_flags.h  gpio_manager.c  gpio_manager.h  nvs_identity.c  nvs_identity.h  structured_logging.c  structured_logging.h
AS_HomeAutomation/components/connectivity_manager/: CMakeLists.txt  connectivity_manager.c  connectivity_manager.h
AS_HomeAutomation/components/device_control/: CMakeLists.txt  cloud_command.c  device_control.c  device_control.h
AS_HomeAutomation/components/provisioning_manager/: CMakeLists.txt  blufi_init.c  blufi_internal.h  blufi_security.c  provisioning_manager.c  provisioning_manager.h
AS_HomeAutomation/components/security_manager/: CMakeLists.txt  security_manager.c  security_manager.h
AS_HomeAutomation/components/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
AS_HomeAutomation/docs/: Requirements_Specification.md
AS_HomeAutomation/main/: CMakeLists.txt  app_core.c  app_core.h  app_main.c  event_bus.c  event_bus.h
AS_HomeAutomation/tools/config_generator/: generate_config.py  requirements.txt  vendor_devices.csv
blufi/blufi/: .project
blufi/blufi/main/: blufi_example_main.c
